RESOLVED FIXED209262
[Multicolumn] RenderListItem::positionListMarker should not fail when the list marker is inside a spanner.
https://bugs.webkit.org/show_bug.cgi?id=209262
Summary [Multicolumn] RenderListItem::positionListMarker should not fail when the lis...
alan
Reported 2020-03-18 18:32:55 PDT
Attachments
Patch (16.98 KB, patch)
2020-03-18 18:49 PDT, alan
no flags
alan
Comment 1 2020-03-18 18:49:25 PDT
EWS
Comment 2 2020-03-18 22:02:36 PDT
Committed r258680: <https://trac.webkit.org/changeset/258680> All reviewed patches have been landed. Closing bug and clearing flags on attachment 393935 [details].
Ryosuke Niwa
Comment 3 2020-04-01 20:24:44 PDT
*** Bug 207032 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.