Source/WebCore/rendering/RenderListItem.cpp
@@ -248,7 +248,8 @@ void RenderListItem::layout()
 
 void RenderListItem::addOverflowFromChildren()
 {
-    positionListMarker();
+    if (m_marker)
+        m_marker->addOverflowFromListMarker();
     RenderBlockFlow::addOverflowFromChildren();
 }
 
@@ -259,102 +260,6 @@ void RenderListItem::computePreferredLogicalWidths()
         m_marker->updateMarginsAndContent();
 
     RenderBlockFlow::computePreferredLogicalWidths();
-}
-
-void RenderListItem::positionListMarker()
-{
-    if (!m_marker || !m_marker->parent() || !m_marker->parent()->isBox())
-        return;
-
-    if (m_marker->isInside() || !m_marker->inlineBoxWrapper())
-        return;
-
-    LayoutUnit markerOldLogicalLeft = m_marker->logicalLeft();
-    LayoutUnit blockOffset;
-    LayoutUnit lineOffset;
-    for (auto* ancestor = m_marker->parentBox(); ancestor && ancestor != this; ancestor = ancestor->parentBox()) {
-        blockOffset += ancestor->logicalTop();
-        lineOffset += ancestor->logicalLeft();
-    }
-
-    bool adjustOverflow = false;
-    LayoutUnit markerLogicalLeft;
-    bool hitSelfPaintingLayer = false;
-
-    const RootInlineBox& rootBox = m_marker->inlineBoxWrapper()->root();
-    LayoutUnit lineTop = rootBox.lineTop();
-    LayoutUnit lineBottom = rootBox.lineBottom();
-
-    // FIXME: Need to account for relative positioning in the layout overflow.
-    if (style().isLeftToRightDirection()) {
-        markerLogicalLeft = m_marker->lineOffsetForListItem() - lineOffset - paddingStart() - borderStart() + m_marker->marginStart();
-        m_marker->inlineBoxWrapper()->adjustLineDirectionPosition(markerLogicalLeft - markerOldLogicalLeft);
-        for (InlineFlowBox* box = m_marker->inlineBoxWrapper()->parent(); box; box = box->parent()) {
-            LayoutRect newLogicalVisualOverflowRect = box->logicalVisualOverflowRect(lineTop, lineBottom);
-            LayoutRect newLogicalLayoutOverflowRect = box->logicalLayoutOverflowRect(lineTop, lineBottom);
-            if (markerLogicalLeft < newLogicalVisualOverflowRect.x() && !hitSelfPaintingLayer) {
-                newLogicalVisualOverflowRect.setWidth(newLogicalVisualOverflowRect.maxX() - markerLogicalLeft);
-                newLogicalVisualOverflowRect.setX(markerLogicalLeft);
-                if (box == &rootBox)
-                    adjustOverflow = true;
-            }
-            if (markerLogicalLeft < newLogicalLayoutOverflowRect.x()) {
-                newLogicalLayoutOverflowRect.setWidth(newLogicalLayoutOverflowRect.maxX() - markerLogicalLeft);
-                newLogicalLayoutOverflowRect.setX(markerLogicalLeft);
-                if (box == &rootBox)
-                    adjustOverflow = true;
-            }
-            box->setOverflowFromLogicalRects(newLogicalLayoutOverflowRect, newLogicalVisualOverflowRect, lineTop, lineBottom);
-            if (box->renderer().hasSelfPaintingLayer())
-                hitSelfPaintingLayer = true;
-        }
-    } else {
-        markerLogicalLeft = m_marker->lineOffsetForListItem() - lineOffset + paddingStart() + borderStart() + m_marker->marginEnd();
-        m_marker->inlineBoxWrapper()->adjustLineDirectionPosition(markerLogicalLeft - markerOldLogicalLeft);
-        for (InlineFlowBox* box = m_marker->inlineBoxWrapper()->parent(); box; box = box->parent()) {
-            LayoutRect newLogicalVisualOverflowRect = box->logicalVisualOverflowRect(lineTop, lineBottom);
-            LayoutRect newLogicalLayoutOverflowRect = box->logicalLayoutOverflowRect(lineTop, lineBottom);
-            if (markerLogicalLeft + m_marker->logicalWidth() > newLogicalVisualOverflowRect.maxX() && !hitSelfPaintingLayer) {
-                newLogicalVisualOverflowRect.setWidth(markerLogicalLeft + m_marker->logicalWidth() - newLogicalVisualOverflowRect.x());
-                if (box == &rootBox)
-                    adjustOverflow = true;
-            }
-            if (markerLogicalLeft + m_marker->logicalWidth() > newLogicalLayoutOverflowRect.maxX()) {
-                newLogicalLayoutOverflowRect.setWidth(markerLogicalLeft + m_marker->logicalWidth() - newLogicalLayoutOverflowRect.x());
-                if (box == &rootBox)
-                    adjustOverflow = true;
-            }
-            box->setOverflowFromLogicalRects(newLogicalLayoutOverflowRect, newLogicalVisualOverflowRect, lineTop, lineBottom);
-                
-            if (box->renderer().hasSelfPaintingLayer())
-                hitSelfPaintingLayer = true;
-        }
-    }
-
-    if (adjustOverflow) {
-        LayoutRect markerRect(markerLogicalLeft + lineOffset, blockOffset, m_marker->width(), m_marker->height());
-        if (!style().isHorizontalWritingMode())
-            markerRect = markerRect.transposedRect();
-        RenderBox* markerAncestor = m_marker.get();
-        bool propagateVisualOverflow = true;
-        bool propagateLayoutOverflow = true;
-        do {
-            markerAncestor = markerAncestor->parentBox();
-            if (markerAncestor->hasOverflowClip())
-                propagateVisualOverflow = false;
-            if (is<RenderBlock>(*markerAncestor)) {
-                if (propagateVisualOverflow)
-                    downcast<RenderBlock>(*markerAncestor).addVisualOverflow(markerRect);
-                if (propagateLayoutOverflow)
-                    downcast<RenderBlock>(*markerAncestor).addLayoutOverflow(markerRect);
-            }
-            if (markerAncestor->hasOverflowClip())
-                propagateLayoutOverflow = false;
-            if (markerAncestor->hasSelfPaintingLayer())
-                propagateVisualOverflow = false;
-            markerRect.moveBy(-markerAncestor->location());
-        } while (markerAncestor != this && propagateVisualOverflow && propagateLayoutOverflow);
-    }
 }
 
 void RenderListItem::paint(PaintInfo& paintInfo, const LayoutPoint& paintOffset)
